--- a/5_Integration/springbackend/src/main/resources/application.yml
+++ b/5_Integration/springbackend/src/main/resources/application.yml
@@ -1,22 +1,22 @@
 server:
   port: 8001
   
-spring :
+spring:
   security:
     oauth2:
       client:
         provider:
           keycloak:     # Ou tout simplement issuer-uri
             issuer-uri: http://localhost:8080/realms/formation
-            token-uri: http://localhost:8080/realms/formation/protocol/openid-connect/token
-            authorization-uri: http://localhost:8080/realms/formation/protocol/openid-connect/auth
-#            user-info-uri: http://localhost:8080/auth/realms/formation/protocol/openid-connect/userinfo
+#            token-uri: http://localhost:8080/realms/formation/protocol/openid-connect/token
+#            authorization-uri: http://localhost:8080/realms/formation/protocol/openid-connect/auth
+##            user-info-uri: http://localhost:8080/auth/realms/formation/protocol/openid-connect/userinfo
             user-name-attribute: preferred_username
         registration:
           springapp:
             provider: keycloak
             client-id: springapp
-            client-secret: nujtLPZkg6c4lvXAVXjPpBBcKtcThIg1
+            client-secret: DLu9KpgY59POm0cbY4k4K0OJBHipd6Co
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"
             scope: openid
